--- a/2.3使用第三方库简化流程/笔记.md
+++ b/2.3使用第三方库简化流程/笔记.md
@@ -27,3 +27,20 @@ npm i -g typescript
 
 > jQuery：用js写的，没有类型检查
 > @types/jquery，为jQuery库添加类型检查
+
+
+## 使用第三方库简化流程
+
+ts-node：将ts代码在内存中完成编译，同时完成运行。
+```shell
+npm install -g ts-node
+
+执行：ts-node src/index.ts
+```
+
+nodemon：用于检测文件的变化。
+```shell
+npm i -g nodemon
+
+执行：nodemon --exec ts-node src/index.ts
+```
