--- a/6.3readonly修饰符/笔记.md
+++ b/6.3readonly修饰符/笔记.md
@@ -36,3 +36,10 @@ class Banner extends React.Component{
 它们的区别：
 - 子接口不能覆盖父接口的成员
 - 交叉类型会把相同成员的类型进行交叉
+
+
+**readonly**
+
+只读修饰符，修饰的目标是只读
+
+只读修饰符不在编译结果中
